--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://domotord90/github.io/react-memory-game",
+  "homepage": "https://domotord90/github.io/react-memory-game/",
   "name": "react-memory-game",
   "version": "0.1.0",
   "private": true,
