--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://domotord90/github.io/react-memory-game/",
   "name": "react-memory-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://domotord90/github.io/react-memory-game/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
