--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-memory-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://domotord90/github.io/react-memory-game/",
+  "homepage": "https://domotord90.github.io/react-memory-game",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
